<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>cn.fyy</groupId>
    <artifactId>AiFuWaiWaiGongJuBao</artifactId>
    <version>1.0</version>
    <packaging>pom</packaging>

    <modules>
        <module>Dispose</module>
        <module>Encrypt</module>
        <module>Excel</module>
        <module>Http</module>
        <module>Mail</module>
        <module>Project</module>
        <module>Schedule</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <java.version>1.8</java.version>
    </properties>

    <dependencyManagement>
        <dependencies>

        </dependencies>
    </dependencyManagement>


</project>
